ingest and eval wip

--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -1177,18 +1177,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "5f170227-d280-4787-993e-62c5178a8a09",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df_raw_flat.to_csv('df_raw_flat.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "ac812fed-5f39-435e-902f-2a9a9ca22f53",
    "metadata": {
@@ -1236,6 +1224,7 @@
     }
    ],
    "source": [
+    "# Look at missing values\n",
     "print(df_raw_flat.shape)\n",
     "\n",
     "null_counts = df_raw_flat.isnull().sum()\n",
@@ -1278,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "id": "e93293ce-e896-4583-8fe7-e5e0f79069d6",
    "metadata": {
     "tags": []
@@ -1291,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 56,
    "id": "7a46c174-3760-45de-9cb9-e2cff964d16a",
    "metadata": {
     "tags": []
@@ -1303,7 +1292,7 @@
        "(1641689, 144)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1303,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
+   "id": "727e6e2f-27e6-4d45-a94b-107dcc42daff",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Is target present in all rows?\n",
+    "null_counts = df_working.isnull().sum()\n",
+    "null_counts['action_type']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "id": "c3b141aa-208b-45c8-a6b9-c23fd078e6b6",
    "metadata": {
     "tags": []
@@ -1350,14 +1364,13 @@
    ],
    "source": [
     "# Look at values in columns that are partially empty\n",
-    "null_counts = df_working.isnull().sum()\n",
     "some_null = null_counts[null_counts > 0]\n",
     "print(some_null.index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 59,
    "id": "850e2b15-d4a9-4c69-b881-0d1013334176",
    "metadata": {
     "tags": []
@@ -4155,7 +4168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 60,
    "id": "3e0d1dcd-c394-43ae-8e40-d9fdfc238ef3",
    "metadata": {
     "tags": []
@@ -4186,7 +4199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 61,
    "id": "8225fb33-69c5-42f3-8275-6b22765a36db",
    "metadata": {
     "tags": []
@@ -4198,7 +4211,7 @@
        "(1641689, 81)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4209,7 +4222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 62,
    "id": "3f46bb51-87f1-4aec-86b2-884c445ac4de",
    "metadata": {
     "tags": []
@@ -4229,7 +4242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 63,
    "id": "c7a496aa-1195-4a03-bffd-4f6764d7c937",
    "metadata": {
     "tags": []
@@ -4270,7 +4283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 64,
    "id": "82f59d7b-2d98-489a-a5ea-b998797b2c91",
    "metadata": {
     "tags": []
@@ -4297,7 +4310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "id": "9f91e068-6344-4ffd-a36f-597d9b97147f",
    "metadata": {
     "tags": []
@@ -4309,7 +4322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "id": "2c823161-0fd9-4743-a1c9-4d76355eb0a4",
    "metadata": {
     "tags": []
@@ -4321,7 +4334,7 @@
        "(1641689, 61)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4340,7 +4353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 67,
    "id": "d938d8cd-8cb8-443f-8b5e-2af32a24f4c7",
    "metadata": {
     "tags": []
@@ -4427,7 +4440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 68,
    "id": "a6503790-4606-4a44-b54c-6355246bcdfe",
    "metadata": {
     "tags": []
@@ -4957,7 +4970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 69,
    "id": "e87b0872-333e-4772-8257-46b94d5c2d41",
    "metadata": {
     "tags": []
@@ -4969,7 +4982,7 @@
        "(1641689, 54)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4985,7 +4998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 70,
    "id": "3a2810ae-fa9f-4fb2-8151-441c12a1c8ec",
    "metadata": {},
    "outputs": [
@@ -5278,26 +5291,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "8ae5d1fa-40bc-4225-b51b-2f355b6808e8",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 72,
+   "id": "14689466-e25f-40aa-b35a-463622a1286c",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1641689, 51)"
+       "(1641689, 46)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 3 more zero-variance columns found\n",
-    "to_drop = ['isInteraction', 'isFatal', 'visits']\n",
+    "# 8 more columns found that are either zero-variance, \n",
+    "# redundant, or present data leakage concerns\n",
+    "to_drop = ['isInteraction', 'isFatal', 'visits', \n",
+    "           'continent', 'subContinent', 'exitScreenName', 'hour', 'minute']\n",
     "\n",
     "df_working.drop(columns=to_drop, inplace=True)\n",
     "df_working.shape"
@@ -5305,11 +5318,265 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "id": "6bf98923-6016-4d92-bd26-8308842e3ffd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1641689 entries, 0 to 1641688\n",
+      "Data columns (total 46 columns):\n",
+      " #   Column                   Non-Null Count    Dtype  \n",
+      "---  ------                   --------------    -----  \n",
+      " 0   visitNumber              1641689 non-null  Int64  \n",
+      " 1   visitId                  1641689 non-null  Int64  \n",
+      " 2   visitStartTime           1641689 non-null  Int64  \n",
+      " 3   date                     1641689 non-null  object \n",
+      " 4   fullVisitorId            1641689 non-null  object \n",
+      " 5   channelGrouping          1641689 non-null  object \n",
+      " 6   hitNumber                1641689 non-null  Int64  \n",
+      " 7   time                     1641689 non-null  Int64  \n",
+      " 8   isEntrance               418631 non-null   boolean\n",
+      " 9   isExit                   422694 non-null   boolean\n",
+      " 10  type                     1641689 non-null  object \n",
+      " 11  pagePathLevel1           1641689 non-null  object \n",
+      " 12  pagePathLevel2           1641689 non-null  object \n",
+      " 13  pagePathLevel3           1641689 non-null  object \n",
+      " 14  pagePathLevel4           1641689 non-null  object \n",
+      " 15  screenName               1641689 non-null  object \n",
+      " 16  landingScreenName        1641689 non-null  object \n",
+      " 17  productPrice             1157382 non-null  Int64  \n",
+      " 18  localProductPrice        1157382 non-null  Int64  \n",
+      " 19  isImpression             1065007 non-null  boolean\n",
+      " 20  action_type              1641689 non-null  object \n",
+      " 21  step                     1641689 non-null  Int64  \n",
+      " 22  socialNetwork            1641689 non-null  object \n",
+      " 23  hasSocialSourceReferral  1641689 non-null  object \n",
+      " 24  contentGroup1            1641689 non-null  object \n",
+      " 25  contentGroup2            1641689 non-null  object \n",
+      " 26  contentGroup3            1641689 non-null  object \n",
+      " 27  previousContentGroup1    1641689 non-null  object \n",
+      " 28  previousContentGroup2    1641689 non-null  object \n",
+      " 29  previousContentGroup3    1641689 non-null  object \n",
+      " 30  previousContentGroup4    1641689 non-null  object \n",
+      " 31  previousContentGroup5    1641689 non-null  object \n",
+      " 32  campaign                 1641689 non-null  object \n",
+      " 33  source                   1641689 non-null  object \n",
+      " 34  medium                   1641689 non-null  object \n",
+      " 35  hits                     1641689 non-null  Int64  \n",
+      " 36  pageviews                1641684 non-null  Int64  \n",
+      " 37  timeOnSite               1439082 non-null  Int64  \n",
+      " 38  bounces                  201713 non-null   Int64  \n",
+      " 39  newVisits                1183262 non-null  Int64  \n",
+      " 40  browser                  1641689 non-null  object \n",
+      " 41  operatingSystem          1641689 non-null  object \n",
+      " 42  isMobile                 1641689 non-null  boolean\n",
+      " 43  deviceCategory           1641689 non-null  object \n",
+      " 44  country                  1641689 non-null  object \n",
+      " 45  networkDomain            1641689 non-null  object \n",
+      "dtypes: Int64(13), boolean(4), object(29)\n",
+      "memory usage: 558.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_working.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "144a77ba-391f-4c6b-986f-610c6642934b",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "* Some remaining categorical features seem important but unsure how to encode / if model will tolerate\n",
+    "networkDomain country operatingSystem browser source screenName \n",
+    "landingScreenName pagePathLevel1 pagePathLevel2 pagePathLevel3 pagePathLevel4\n",
+    "* As a compromise to use some of the data from these I will keep values that account for the majority of rows and set the rest to 'other'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "f6f6a524-66b6-4403-9e1d-d86a75200eda",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "networkDomain\n",
+      "(not set)              552936\n",
+      "unknown.unknown        191038\n",
+      "comcast.net             86286\n",
+      "verizon.net             39018\n",
+      "rr.com                  36454\n",
+      "comcastbusiness.net     34686\n",
+      "optonline.net           15309\n",
+      "hinet.net               14841\n",
+      "cox.net                 14187\n",
+      "sbcglobal.net           14077\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "country\n",
+      "United States     938478\n",
+      "Canada             73348\n",
+      "India              68098\n",
+      "United Kingdom     53136\n",
+      "Germany            29025\n",
+      "Taiwan             28967\n",
+      "Japan              26390\n",
+      "Australia          23628\n",
+      "France             23264\n",
+      "Spain              20191\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "operatingSystem\n",
+      "Windows          563284\n",
+      "Macintosh        471482\n",
+      "Android          236855\n",
+      "iOS              228533\n",
+      "Chrome OS         79622\n",
+      "Linux             53002\n",
+      "(not set)          6300\n",
+      "Windows Phone      1595\n",
+      "Samsung             540\n",
+      "BlackBerry          166\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "browser\n",
+      "Chrome               1215774\n",
+      "Safari                255282\n",
+      "Firefox                65573\n",
+      "Internet Explorer      30684\n",
+      "Android Webview        22933\n",
+      "Edge                   17384\n",
+      "Safari (in-app)         9315\n",
+      "Opera Mini              8090\n",
+      "Opera                   7639\n",
+      "UC Browser              2610\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "source\n",
+      "google                     912275\n",
+      "(direct)                   476677\n",
+      "youtube.com                115031\n",
+      "Partners                    27958\n",
+      "analytics.google.com        17306\n",
+      "dfa                         13854\n",
+      "google.com                  13039\n",
+      "bing                         6169\n",
+      "siliconvalley.about.com      5414\n",
+      "l.facebook.com               5196\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "screenName\n",
+      "shop.googlemerchandisestore.com/home                                              386439\n",
+      "shop.googlemerchandisestore.com/google+redesign/shop+by+brand/youtube             170479\n",
+      "shop.googlemerchandisestore.com/google+redesign/shop+by+brand/google               62152\n",
+      "shop.googlemerchandisestore.com/store.html                                         53565\n",
+      "shop.googlemerchandisestore.com/google+redesign/apparel                            46681\n",
+      "shop.googlemerchandisestore.com/google+redesign/bags                               38719\n",
+      "shop.googlemerchandisestore.com/google+redesign/accessories                        37619\n",
+      "shop.googlemerchandisestore.com/google+redesign/electronics                        35932\n",
+      "shop.googlemerchandisestore.com/google+redesign/apparel/men++s/men++s+t+shirts     35171\n",
+      "shop.googlemerchandisestore.com/google+redesign/accessories/fun                    35155\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "landingScreenName\n",
+      "shop.googlemerchandisestore.com/home                                               699644\n",
+      "www.googlemerchandisestore.com/home                                                360421\n",
+      "shop.googlemerchandisestore.com/google+redesign/shop+by+brand/youtube              205258\n",
+      "shop.googlemerchandisestore.com/google+redesign/apparel/men++s/men++s+t+shirts      46111\n",
+      "shop.googlemerchandisestore.com/google+redesign/drinkware                           26021\n",
+      "shop.googlemerchandisestore.com/google+redesign/bags                                24197\n",
+      "shop.googlemerchandisestore.com/basket.html                                         21346\n",
+      "shop.googlemerchandisestore.com/signin.html                                         19139\n",
+      "shop.googlemerchandisestore.com/google+redesign/apparel                             17461\n",
+      "shop.googlemerchandisestore.com/google+redesign/apparel/men++s/men++s+outerwear     14834\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "pagePathLevel1\n",
+      "/google+redesign/       1074617\n",
+      "/home                    416663\n",
+      "/store.html               53576\n",
+      "/asearch.html             30003\n",
+      "/basket.html              19012\n",
+      "/yourinfo.html             8895\n",
+      "/payment.html              8581\n",
+      "/revieworder.html          7081\n",
+      "/signin.html               7076\n",
+      "/ordercompleted.html       6091\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "pagePathLevel2\n",
+      "                   563107\n",
+      "/apparel/          297538\n",
+      "/shop+by+brand/    263536\n",
+      "/accessories/       81613\n",
+      "/bags/              79148\n",
+      "/office/            57690\n",
+      "/electronics/       48915\n",
+      "/apparel            46694\n",
+      "/bags               38719\n",
+      "/accessories        37619\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "pagePathLevel3\n",
+      "                               794370\n",
+      "/youtube                       170479\n",
+      "/mens/                          67758\n",
+      "/google                         62152\n",
+      "/men++s/                        58157\n",
+      "/fun                            35161\n",
+      "/water+bottles+and+tumblers     28915\n",
+      "/headgear                       26846\n",
+      "/android                        26718\n",
+      "/notebooks++journals            26394\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "pagePathLevel4\n",
+      "                          1367782\n",
+      "/home                       41200\n",
+      "/men++s+t+shirts            35171\n",
+      "/mens+t+shirts              33330\n",
+      "/men++s+outerwear           21429\n",
+      "/mens+outerwear             18121\n",
+      "/mens+performance+wear      14028\n",
+      "/quickview                  11031\n",
+      "/womens+t+shirts            10901\n",
+      "/women+s+t+shirts            8365\n",
+      "Name: count, dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "truncCols = ['networkDomain', 'country', 'operatingSystem', 'browser', \n",
+    "             'source', 'screenName', 'landingScreenName', 'pagePathLevel1', \n",
+    "             'pagePathLevel2', 'pagePathLevel3', 'pagePathLevel4']\n",
+    "for col in truncCols:\n",
+    "    print(df_working[col].value_counts().head(10))\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "14689466-e25f-40aa-b35a-463622a1286c",
+   "id": "d05b818a-2806-417a-a836-c51e1038d327",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Continued in ingest.ipynb"
+   ]
   }
  ],
  "metadata": {
