--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -1192,7 +1192,7 @@
    "id": "d80a1d2a-2bba-48d1-a8c4-0d96984dc030",
    "metadata": {},
    "source": [
-    "### Initial analysis"
+    "### Feature Selection"
    ]
   },
   {
@@ -5396,8 +5396,8 @@
    },
    "source": [
     "* Some remaining categorical features seem important but unsure how to encode / if model will tolerate\n",
-    "networkDomain country operatingSystem browser source screenName \n",
-    "landingScreenName pagePathLevel1 pagePathLevel2 pagePathLevel3 pagePathLevel4\n",
+    "(networkDomain country operatingSystem browser source screenName \n",
+    "landingScreenName pagePathLevel1 pagePathLevel2 pagePathLevel3 pagePathLevel4)\n",
     "* As a compromise to use some of the data from these I will keep values that account for the majority of rows and set the rest to 'other'"
    ]
   },
