--- a/ingest.ipynb
+++ b/ingest.ipynb
@@ -53,8 +53,7 @@
    "id": "f06b3ab4-728f-4a36-934e-7e7c92b26c8b",
    "metadata": {},
    "source": [
-    "#### Other changes made to training table\n",
-    "* Removed hitId column. BIGNUMERIC column caused error in AutoML\n",
+    "#### Other changes made to training set\n",
     "* Re-added sku as it seems important and could be used in place of the various pagePathLevel fields. To prevent duplicate rows I only retrieved values for this field where the length of the product array was 1. Hoping label encoding or something better is possible here\n",
     "* Encoded explicit label column: 1 whenever hits.eCommerceAction.action_type is 3, 0 otherwise\n",
     "* Dropped all rows that are bounces to slightly improve the class imbalance; may not be significant\n",
@@ -202,6 +201,68 @@
     ") AS\n",
     "\n",
     "SELECT * FROM akane_bqds.ga4_training_att2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5698dba3-16a7-443d-92a6-2c1cf39a270a",
+   "metadata": {},
+   "source": [
+    "### Model 3: Weighted logistic regression classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25fc36ad-459a-480e-924a-d457b65077ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CREATE OR REPLACE MODEL akane_bqds.ak_lrmodel2\n",
+    "OPTIONS(\n",
+    "  MODEL_TYPE=\"LOGISTIC_REG\",\n",
+    "  INPUT_LABEL_COLS=['label'],\n",
+    "  DATA_SPLIT_METHOD='AUTO_SPLIT',\n",
+    "  AUTO_CLASS_WEIGHTS=True,\n",
+    "  HPARAM_TUNING_ALGORITHM='VIZIER_DEFAULT',\n",
+    "  HPARAM_TUNING_OBJECTIVES=['roc_auc'],\n",
+    "  EARLY_STOP=True,\n",
+    "  num_trials=8,\n",
+    "  max_parallel_trials=4\n",
+    ") AS\n",
+    "\n",
+    "SELECT * EXCEPT(sku) FROM akane_bqds.ga4_training_att2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a611300e-4734-47d5-8991-7d050abe77a6",
+   "metadata": {},
+   "source": [
+    "### Model 4: Weighted logistic regression classifier, double trials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4ed59e8-4358-4a0b-a81a-13a59db34e7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CREATE OR REPLACE MODEL akane_bqds.ak_lrmodel1\n",
+    "OPTIONS(\n",
+    "  MODEL_TYPE=\"LOGISTIC_REG\",\n",
+    "  INPUT_LABEL_COLS=['label'],\n",
+    "  DATA_SPLIT_METHOD='AUTO_SPLIT',\n",
+    "  AUTO_CLASS_WEIGHTS=True,\n",
+    "  HPARAM_TUNING_ALGORITHM='VIZIER_DEFAULT',\n",
+    "  HPARAM_TUNING_OBJECTIVES=['roc_auc'],\n",
+    "  EARLY_STOP=True,\n",
+    "  num_trials=16,\n",
+    "  max_parallel_trials=2\n",
+    ") AS\n",
+    "\n",
+    "SELECT * EXCEPT(sku) FROM akane_bqds.ga4_training_att2"
    ]
   }
  ],
